syntax = "proto3";
option go_package = "generated/pb";

import "google/protobuf/timestamp.proto";

package kannon;

message EmailToSend {
  string message_id = 1;
  string from = 2;
  string to = 3;
  string return_path = 4;
  bytes body = 5;
}

message Delivered {
  string message_id = 1;
  string email = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message Error {
  string message_id = 1;
  string email = 2;
  uint32 code = 3;
  string msg = 4;
  bool is_permanent = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message Open {
  string message_id = 1;
  string email = 2;
  string ip = 3;
  string user_agent = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message Click {
  string message_id = 1;
  string email = 2;
  string ip = 3;
  string user_agent = 4;
  string url = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message SoftBounce {
  string message_id = 1;
  string email = 2;
  string from = 3;
  uint32 code = 4;
  string msg = 5;
  google.protobuf.Timestamp timestamp = 6;
  string domain = 7;
}
